# DynAutoDiff

./: .gitignore  CMakeLists.txt  Logo.agx  Main.agx  ReadMe.md  cmake_install.cmake  graph.json  hello.cpp
.cache/clangd/index/: Common.hpp.432C7AD1EA8B450F.idx  Distributions.hpp.BA7B204B17B32EBD.idx  DynAutoDiff.hpp.C9586A88AE70CD5D.idx  EigenHelper.hpp.74E83381D13D0723.idx  GraphManager.hpp.8FA41A3BA75D2D26.idx  Losses.hpp.C1D9E597A89ADBE2.idx  Var.hpp.AD395BBC4638EFB1.idx  hello.cpp.EAB70C63EFC06627.idx  json.hpp.05B86FA0F04CAF66.idx
DynAutoDiff/: CeresOptimizer.hpp  Common.hpp  Distributions.hpp  DynAutoDiff.hpp  EigenHelper.hpp  GDOptimizer.hpp  GraphManager.hpp  Losses.hpp  NloptOptimizer.hpp  Var.hpp
examples/ceres_GMM/: CMakeLists.txt  cmake_install.cmake  src.cpp
examples/ceres_linear_regression/: CMakeLists.txt  cmake_install.cmake  src.cpp
examples/ceres_neural_network/: CMakeLists.txt  cmake_install.cmake  src.cpp
examples/neural_network/: CMakeLists.txt  Main.nb  cmake_install.cmake  data.csv  main.m  mp  r  src.cpp  test_X.txt  test_y.txt  train_X.txt  train_y.txt
examples/nlopt_GMM/: CMakeLists.txt  cmake_install.cmake  mp  src.cpp
test/: .gitignore  CMakeLists.txt  HSCCI.csv  S1Init.txt  S2Init.txt  X.txt  Xb.txt  cancer_reg.txt  cmake_install.cmake  gmm_datat5000_10.txt  graph.json  rt  test  test_IO.cpp  test_arithmetic_operator.cpp  test_ceres_optimizer.cpp  test_distributions.cpp  test_eigen_helper  test_eigen_helper.cpp  test_init_var  test_init_var.cpp  test_losses  test_losses.cpp  test_matrix.cpp  test_neural_network  test_neural_network.cpp  tmp_test.cpp  y.txt  yb.txt
test/util/: GenerateData.m  GenerateExpression.nb  Main.nb  Neuralnetwork.nb  NormalDensity.m  TDensity.nb  Test.txt  fill_missing.do  sone.m  test_arithmetic_operator.nb  test_matrix.nb
test/util/GMM/: Main.m  S1Init.csv  S2Init.csv  data.csv  data10.csv  inv_vstack_half.m  nll.m  nll_test.m  report_sol.m  vstack_half.m
test/util/binary_classification_dataset/: Main.do  churn.dta  customer.dta  customer_data.csv  internet.dta  internet_data.csv
utils/: download.sh
